--- a/static/Group.html
+++ b/static/Group.html
@@ -5,11 +5,11 @@
 	<meta charset="UTF-8" />
 	<title>Сервіс обліку студентів</title>
 	<meta name="description"
-		value="Система Обліку Студентів Навчального Закладу" />
+		  value="Система Обліку Студентів Навчального Закладу" />
 	<link rel="stylesheet"
-		href="https://cdn.jsdelivr.net/bootstrap/3.3.0/css/bootstrap.min.css">
+		  href="https://cdn.jsdelivr.net/bootstrap/3.3.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./css/main.css">
-	</head>			
+</head>
 <body>
 	<div class="container">
 		<!-- Header -->
@@ -31,39 +31,34 @@
 		<div class="row" id="sub-header">
 			<div class="col-xs-12">
 				<ul class="nav nav-tabs">
-					<li role="presentation" class="active"><a href="#">Студенти</a></li>
+					<li role="presentation"><a href="#">Студенти</a></li>
 					<li role="presentation"><a href="#">Відвідування</a></li>
-					<li role="presentation"><a href="#">Групи</a></li>
+					<li role="presentation" class="active"><a href="#">Групи</a></li>
 				</ul>
 			</div>
 		</div>
 		<!-- Main page -->
 		<div class="row" id="content-columns">
-			<div class="col-xs-12">
-				<div class="alert alert-warning" role="alert">Студент успішно доданий.</div>
-				<h2 class="head">База Студентів</h2>
-				<a class="btn btn-primary btn-lg head" href="#" role="button">Додати Студента</a>
+			<div class="col-xs-12" id="content-columns">
+				<h2>Групи</h2>
+				<a class="btn btn-primary btn-lg" href="#" role="button">Додати Групу</a>
 				<div>
 					<!-- Table of Student -->
 					<table class="table table-hover table-striped">
 						<thead>
 							<tr>
-								<th><a href="">№</a></th>
-								<th>Фото</th>
-								<th><a href="">Прізвище &uarr;</a></th>
-								<th><a href="#">Ім’я</a></th>
-								<th><a href="#">№ Білету</a></th>
+								<th>#</th>
+								<th><a href="">Назва &uarr;</a></th>
+								<th><a href="#">Староста</a></th>
 								<th>Дії</th>
 							</tr>
 						</thead>
 						<tbody>
-							<!-- Студент Сасюк -->
+							<!-- 1Б-04 -->
 							<tr>
 								<td>1</td>
-								<td><img height="40" width="40" src="./img/SOS.JPG" class="img-circle"></td>
-								<td><a title="Редагувати" href="#">Сасюк</a></td>
-								<td><a title="Редагувати" href="#">Олександр</a></td>
-								<td>2123</td>
+								<td><a title="Редагувати" href="#">1Б-04</a></td>
+								<td><a title="Редагувати" href="#">Бацура Олександр</a></td>
 								<td>
 									<div class="dropdown">
 										<button class="btn btn-default dropdown-toggle" 
@@ -79,13 +74,11 @@
 									</div>
 								</td>
 							</tr>
-							<!-- Студент Бажура -->
+							<!-- 2Б-04 -->
 							<tr>
 								<td>2</td>
-								<td><img height="40" width="40" src="./img/Mich.JPG" class="img-circle"></td>
-								<td><a title="Редагувати" href="#">Бажура</a></td>
-								<td><a title="Редагувати" href="#">Михайло</a></td>
-								<td>2124</td>
+								<td><a title="Редагувати" href="#">2Б-04</a></td>
+								<td><a title="Редагувати" href="#">Козаченко Богдан</a></td>
 								<td>
 									<div class="dropdown">
 										<button class="btn btn-default dropdown-toggle" 
@@ -101,13 +94,11 @@
 									</div>
 								</td>
 							</tr>
-							<!-- Студент Швець -->
+							<!-- БМ-04 -->
 							<tr>
 								<td>3</td>
-								<td><img height="40" width="40" src="./img/Kir.JPG" class="img-circle"></td>
-								<td><a title="Редагувати" href="#">Швець</a></td>
-								<td><a title="Редагувати" href="#">Кирило</a></td>
-								<td>2125</td>
+								<td><a title="Редагувати" href="#">БМ-04</a></td>
+								<td><a title="Редагувати" href="#">Павлюк Ірина</a></td>
 								<td>
 									<div class="dropdown">
 										<button class="btn btn-default dropdown-toggle" 
@@ -127,23 +118,15 @@
 					</table>
 					<!-- Panel of Navigation -->
 					<nav>
-						<ul class="pagination">
-							<li>
-								<a href="#" aria-label="Previous">
-									<span aria-hidden="true">&laquo;</span>
-								</a>
-							</li>
-							<li><a href="#">1</a></li>
-							<li class="active"><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#">5</a></li>
-							<li>
-								<a href="#" aria-label="Next">
-									<span aria-hidden="true">&raquo;</span>
-								</a>
-							</li>
-						</ul>
+					  <ul class="pagination">
+						<li><a href="#">1</a></li>
+						<li><a class="#" href="#">2</a></li>
+						<li>
+						  <a href="#" aria-label="Next">
+							<span aria-hidden="true">Далі</span>
+						  </a>
+						</li>
+					  </ul>
 					</nav>
 				</div>
 			</div>
@@ -153,9 +136,9 @@
 			<div class="col-xs-12">&copy; 2014 Сервіс Обліку Студентів</div>
 		</div>
 	</div>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
 	<script src="https://cdn.jsdelivr.net/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-		
+	
 </body>
 	
 </html>
