end of Glava 5 version 2

--- a/static/form.html
+++ b/static/form.html
@@ -47,7 +47,7 @@
 					</td>
 					<td>
 						<div class="form-group">
-							<input type="text" class="form-control" id="inputFirstName" placeholder="Власюк">
+							<input type="text" class="form-control" id="inputFirstName" placeholder="Конопелько">
 						</div>
 					</td>
 				</tr>
