--- a/static/groups.html
+++ b/static/groups.html
@@ -21,9 +21,9 @@
 				<strong>Група:</strong>
 				<select>
 					<option value="">Усі студенти</option>
-					<option value="">БМ-04, Сасюк Олександр (№ 2123)</option>
-					<option value="">БМ-04, Бажура Михайло (№ 2124)</option>
-					<option value="">БМ-04, Швець Кирило (№ 2125)</option>
+					<option value="">1Б-04, Бацура Олександр (№ 2123)</option>
+					<option value="">1Б-04, Козаченко Богдан (№ 2124)</option>
+					<option value="">БМ-04, Мелфой Люціус (№ 2125)</option>
 				</select>
 			</div>
 		</div>
@@ -98,7 +98,7 @@
 							<tr>
 								<td>3</td>
 								<td><a title="Редагувати" href="#">БМ-04</a></td>
-								<td><a title="Редагувати" href="#">Павлюк Ірина</a></td>
+								<td><a title="Редагувати" href="#">Мелфой Люціус</a></td>
 								<td>
 									<div class="dropdown">
 										<button class="btn btn-default dropdown-toggle" 
