--- a/static/index.html
+++ b/static/index.html
@@ -21,9 +21,9 @@
 				<strong>Група:</strong>
 				<select>
 					<option value="">Усі студенти</option>
-					<option value="">БМ-04, Сасюк Олександр (№ 2123)</option>
-					<option value="">БМ-04, Бажура Михайло (№ 2124)</option>
-					<option value="">БМ-04, Швець Кирило (№ 2125)</option>
+					<option value="">БМ-04, Вейдер Дарт (№ 2123)</option>
+					<option value="">БМ-04, Мелфой Люціус (№ 2124)</option>
+					<option value="">БМ-04, Бендер Остап (№ 2125)</option>
 				</select>
 			</div>
 		</div>
@@ -57,12 +57,12 @@
 							</tr>
 						</thead>
 						<tbody>
-							<!-- Студент Сасюк -->
+							<!-- Студент Вейдер -->
 							<tr>
 								<td>1</td>
 								<td><img height="40" width="40" src="./img/SOS.JPG" class="img-circle"></td>
-								<td><a title="Редагувати" href="#">Сасюк</a></td>
-								<td><a title="Редагувати" href="#">Олександр</a></td>
+								<td><a title="Редагувати" href="#">Вейдер</a></td>
+								<td><a title="Редагувати" href="#">Дарт</a></td>
 								<td>2123</td>
 								<td>
 									<div class="dropdown">
@@ -79,12 +79,12 @@
 									</div>
 								</td>
 							</tr>
-							<!-- Студент Бажура -->
+							<!-- Студент Мелфой -->
 							<tr>
 								<td>2</td>
 								<td><img height="40" width="40" src="./img/Mich.JPG" class="img-circle"></td>
-								<td><a title="Редагувати" href="#">Бажура</a></td>
-								<td><a title="Редагувати" href="#">Михайло</a></td>
+								<td><a title="Редагувати" href="#">Мелфой</a></td>
+								<td><a title="Редагувати" href="#">Люціус</a></td>
 								<td>2124</td>
 								<td>
 									<div class="dropdown">
@@ -101,12 +101,12 @@
 									</div>
 								</td>
 							</tr>
-							<!-- Студент Швець -->
+							<!-- Студент Бендер -->
 							<tr>
 								<td>3</td>
 								<td><img height="40" width="40" src="./img/Kir.JPG" class="img-circle"></td>
-								<td><a title="Редагувати" href="#">Швець</a></td>
-								<td><a title="Редагувати" href="#">Кирило</a></td>
+								<td><a title="Редагувати" href="#">Бендер</a></td>
+								<td><a title="Редагувати" href="#">Остап</a></td>
 								<td>2125</td>
 								<td>
 									<div class="dropdown">
