--- a/static/journal.html
+++ b/static/journal.html
@@ -22,9 +22,9 @@
 				<strong>Група:</strong>
 				<select>
 					<option value="">Усі студенти</option>
-					<option value="">БМ-04, Сасюк Олександр (№ 2123)</option>
-					<option value="">БМ-04, Бажура Михайло (№ 2124)</option>
-					<option value="">БМ-04, Швець Кирило (№ 2125)</option>
+					<option value="">БМ-04, Вейдер Дарт (№ 2123)</option>
+					<option value="">БМ-04, Мелфой Люціус (№ 2124)</option>
+					<option value="">БМ-04, Бендер Остап (№ 2125)</option>
 				</select>
 			</div>
 		</div>
@@ -83,10 +83,10 @@
 							</tr>
 						</thead>
 						<tbody>
-							<!-- Студент Сасюк -->
+							<!-- Студент Вейдер -->
 							<tr class="head_journal">
 								<td>1</td>
-								<td><a title="Редагувати" href="#">Сасюк Олександр</a></td>
+								<td><a title="Редагувати" href="#">Вейдер Дарт</a></td>
 								<td><div class="checkbox">
 									  <label>
 										<input type="checkbox" id="blankCheckbox" value="option1" aria-label="...">
@@ -268,10 +268,10 @@
 									</div>
 								</td>
 							</tr>
-							<!-- Студент Бажура -->
+							<!-- Студент Мелфой -->
 							<tr class="head_journal">
 								<td>2</td>
-								<td><a title="Редагувати" href="#">Бажура Михайло</a></td>
+								<td><a title="Редагувати" href="#">Мелфой Люціус</a></td>
 								<td><div class="checkbox">
 									  <label>
 										<input type="checkbox" id="blankCheckbox" value="option1" aria-label="...">
@@ -453,10 +453,10 @@
 									</div>
 								</td>
 							</tr>
-							<!-- Студент Швець -->
+							<!-- Студент Бендер -->
 							<tr class="head_journal">
 								<td>3</td>
-								<td><a title="Редагувати" href="#">Швець Кирило</a></td>
+								<td><a title="Редагувати" href="#">Бендер Остап</a></td>
 								<td><div class="checkbox">
 									  <label>
 										<input type="checkbox" id="blankCheckbox" value="option1" aria-label="...">
