end of Glava 5 version 3

--- a/static/form.html
+++ b/static/form.html
@@ -12,118 +12,82 @@
 	</head>			
 <body>
 	<div class="container">
-		<h2 class="head_form">Форма редагування Студента</h2>
+		<div class="row">
+			<div class="col-xs-3"></div>
+			<div class="col-xs-6"><h2 class="head_form">Форма редагування Студента</h2></div>
+			<div class="col-xs-3"></div>
+		</div>
 		<form action="" method="post" enctype="multipart/form-data">
-			<table class="table_form">
-				<tr>
-					<td>
-						<div class="form-group">
-							<p><label for="inputName">Ім’я*</label></p>
-						</div>
-					</td>
-					<td>
-						<div class="form-group">
-							<input type="text" class="form-control" id="inputName" placeholder="Володимир">
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div class="form-group">
-							<p><label for="inputSecondName">По-батькові</label></p>
-						</div>
-					</td>
-					<td>
-						<div class="form-group">
-							<input type="text" class="form-control" id="inputSecondName" placeholder="Володимирович">
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div class="form-group">
-							<p><label for="inputFirstName">Прізвище*</label></p>
-						</div>
-					</td>
-					<td>
-						<div class="form-group">
-							<input type="text" class="form-control" id="inputFirstName" placeholder="Конопелько">
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div class="form-group">
-							<p><label for="inputNumber">№ білету*</label></p>
-						</div>
-					</td>
-					<td>
-						<div class="form-group">
-							<input type="text" class="form-control" id="inputNumber" placeholder="10">
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div class="form-group">
-							<p><label for="inputBirth">Дата народження</label></p>
-						</div>
-					</td>
-					<td>
-						<div class="form-group">
-							<input type="text" class="form-control" id="inputBirth" placeholder="1986-12-20">
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div class="form-group">
-							<p>Фото</p>
-						</div>
-					</td>
-					<td>
-						<div class="form-group">
-							<input type="file" id="inputImage">
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div class="form-group">
-							<p>Група*</p>
-						</div>
-					</td>
-					<td>
-						<select class="form-control">
-							<option>-----</option>
-							<option>1Б-04</option>
-							<option>2Б-04</option>
-							<option>БМ-04</option>
-						</select>
-					</td>
-				</tr>
-				<tr>
-					<td class="bottom_area">
-						<div class="form-group">
-							<p>Додаткові нотатки</p>
-						</div>
-					</td>
-					<td>
-						<textarea class="form-control" rows="3"></textarea>
-					</td>
-				</tr>
-				<tr>
-					<td>
-					</td>
-					<td id="buttoms">
-						<button type="submit" class="btn btn-primary">Зберегти</button>
-						<button type="submit" class="btn btn-close" style="margin-left:10px">Скасувати</button>
-					</td>
-				</tr>
-				
-			</table>
+			<div class="row">
+				<div class="col-xs-3"></div>
+				<div class="col-xs-2"><p><label for="inputName">Ім’я*</label></p></div>
+				<div class="col-xs-3"><input type="text" class="form-control" id="inputName" placeholder="Володимир"></div>
+				<div class="col-xs-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-3"></div>
+				<div class="col-xs-2"><p><label for="inputSecondName">По-батькові</label></p></div>
+				<div class="col-xs-3"><input type="text" class="form-control" id="inputSecondName" placeholder="Володимирович"></div>
+				<div class="col-xs-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-3"></div>
+				<div class="col-xs-2"><p><label for="inputFirstName">Прізвище*</label></p></div>
+				<div class="col-xs-3"><input type="text" class="form-control" id="inputFirstName" placeholder="Конопелько"></div>
+				<div class="col-xs-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-3"></div>
+				<div class="col-xs-2"><p><label for="inputNumber">№ білету*</label></p></div>
+				<div class="col-xs-3"><input type="text" class="form-control" id="inputNumber" placeholder="10"></div>
+				<div class="col-xs-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-3"></div>
+				<div class="col-xs-2"><p><label for="inputBirth">Дата народження</label></p></div>
+				<div class="col-xs-3"><input type="text" class="form-control" id="inputBirth" placeholder="1986-12-20"></div>
+				<div class="col-xs-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-3"></div>
+				<div class="col-xs-2"><p>Фото</p></div>
+				<div class="col-xs-3"><input type="file" id="inputImage"></div>
+				<div class="col-xs-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-3"></div>
+				<div class="col-xs-2"><p>Група*</p></div>
+				<div class="col-xs-3">
+					<select class="form-control">
+						<option>-----</option>
+						<option>1Б-04</option>
+						<option>2Б-04</option>
+						<option>БМ-04</option>
+					</select>
+				</div>
+				<div class="col-xs-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-3"></div>
+				<div class="col-xs-2"><p id="last_p">Додаткові нотатки</p></div>
+				<div class="col-xs-3">
+					<textarea class="form-control" rows="3"></textarea>
+				</div>
+				<div class="col-xs-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-3"></div>
+				<div class="col-xs-2"></div>
+				<div class="col-xs-3">
+					<button type="submit" class="btn btn-primary">Зберегти</button>
+					<button type="submit" class="btn btn-close" style="margin-left:10px">Скасувати</button>
+				</div>
+				<div class="col-xs-4"></div>
+			</div>
 		</form>
-	</div>	
+	</div>
+		
+		
 	
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 	<script src="https://cdn.jsdelivr.net/bootstrap/3.0.0/js/bootstrap.min.js"></script>
